--- a/css/style.css
+++ b/css/style.css
@@ -46,14 +46,15 @@
     box-shadow: 0 0 5px whitesmoke;
 
 }
-.myaccount-content a{
+.myaccount-content span{
     color: black;
     display: block;
     padding: 10px;
     padding-left: 20px;
+    cursor: pointer;
 }
 
-.myaccount-content a:hover{
+.myaccount-content span:hover{
     background-color: rgb(235, 234, 234);
 }
 
@@ -316,7 +317,6 @@ input[type="search"]:focus{
 
 
 
-
 .front-image{
     display: flex;
     justify-content: center;
@@ -362,7 +362,7 @@ input[type="search"]:focus{
     height: 30px;
     background-size: contain;
     display: inline-block;
-    background-image: url(pink_check.jpg);
+    background-image: url(../images/pink_check.jpg);
 }
 
 .right-post-header .sub-heading{
@@ -476,13 +476,13 @@ input[type="search"]:focus{
     border-radius: 50%;
 }
 .mimage-1{
-    background-image: url(product2.jpg) ;
+    background-image: url(../images/product1.jpg) ;
 }
 .mimage-2{
-    background-image: url(product3.jpg) ;
+    background-image: url(../images/product2.jpg) ;
 }
 .mimage-3{
-    background-image: url(product4.jpg) ;
+    background-image: url(../images/product3.jpg) ;
 }
 .team-heading{
     font-size: 50px;
