--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     font-family: 'Labrada', serif;
     scroll-behavior: smooth;
+    cursor: pointer;
 }
 
 body{
@@ -83,6 +84,22 @@ body{
 
 .myaccount:hover .myaccount-content{
     display:block;
+}
+
+
+#cart-number{
+    background: white;
+    color:black;
+    border-radius: 50%;
+    padding: 4px;
+    font-weight: 600;
+    font-size: 8px;
+    position: absolute;
+    transform: translateY(-10px);
+    width: 9px;
+    height: 6px;
+    text-align: center;
+    opacity: 0;
 }
 
 .nav-2{
@@ -224,10 +241,11 @@ body{
     display: flex;
     justify-content: flex-start;
     border: 1px solid rgb(228, 227, 227);
+    cursor: pointer;
 }
 
 
-.nav-bar a:hover{
+.nav-bar span:hover{
     color: #ff4299;
 }
 .left-bar{
@@ -245,8 +263,7 @@ body{
     margin: 5px;
 }
 
-.left-bar a{
-    text-decoration: none;
+.left-bar span{
     color: black;
 }
 
